--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             <h3 class="sentence">Find the best restaurants, cafés, and bars</h3>
             <span>
             <form class="form1">
-                <!-- <input type="text" id="location" name="location" placeholder="Select location"> -->
-                <select name="" id="">
+                <input type="text" id="location" name="location" placeholder="Select location">
+                <!-- <select name="" id="">
                     <option value="">Bn</option>
-                </select>
+                </select> -->
             </form>
             </span>
             <div>
@@ -34,11 +34,11 @@
                     </form>
                 </span>
             </div>
-            <div id="dropdown">
+            <!-- <div id="dropdown">
                 <select name="" id="">
                     <option value="">Bn</option>
                 </select>
-            </div>
+            </div> -->
         </div>
 
         <div class="box">
